# TX

./: .gitignore  ARCHITECTURE-OVERVIEW.md  CONTRIBUTING.md  LICENSE  PROGRESS-02132026.md  PROJECT_HEALTH_SUMMARY.md  README.md  SECURITY.md  TX_INTEGRATION_NOTICE.md  TX_NOTICE.md  build_contracts.sh  start_frontend.sh  start_insurance.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/backend/: .eslintrc.json  .gitignore  Dockerfile  PHASE6_STATUS.md  activate-user.js  docker-compose.yml  document_token.sh  jest.config.js  minimal_server.js  package-lock.json  package-test-scripts.json  package.json  server.js  server.ts  start.js  test-server.js  test-simple.js  tsconfig.json  update-package.js
apps/backend/prisma/: schema.prisma
apps/backend/scripts/: cleanup.sh  test-db-setup.ps1  test-db-setup.sh  test-runner.ps1
apps/backend/src/: app.ts  health.ts  index-clean.ts  index.ts  server.ts
apps/frontend/: create-wallet.js  next.config.ts  osmosis-testnet-config.json  package-lock.json  package.json
apps/insurance-module/: package-lock.json  package.json  server.js
apps/middleware-backup/: apiKey.middleware.ts  auth.middleware.ts  errorHandler.ts  requestLogger.ts  validation.middleware.ts
contracts/: final_phoenix_auction.wat  minimal_contract.rs
contracts/auction/: .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY_AUDIT.md  build_coreum_simple.sh  clean_msg.rs  correct_auction.wat  create_coreum_wasm.py  create_minimal_wasm.py  find_coreum_info.sh  fix_all_jsonschema.sh  fix_properly.py  fix_with_section_sizes.py  instantiate_auction.sh  instantiate_tx_details.json  minimal.wat  minimal_cosmwasm.wat  minimal_test.rs  patch_wasm.py  remove_bulk_memory_final.py  remove_fc.py  simple_fix.py  wasm32-unknown-unknown-coreum.json  working_auction.wat
contracts/auction-guaranteed/: Cargo.toml  fixed_proper_contract.wat  proper_working_contract.wat  simplest_contract.wat  ultimate_contract.wat  ultra_simple.wat
contracts/auction-guaranteed/.cargo/: config.toml
contracts/auction-guaranteed/src/: lib.rs
contracts/auction-guaranteed/tests/: integration_tests.rs
contracts/auction-simple/: auction.c
contracts/auction-template/: Cargo.toml
contracts/auction-working/: Cargo.toml
contracts/auction/.cargo/: config.toml
contracts/auction/artifacts/: temp.wat
contracts/auction/backup/: Cargo.toml
contracts/auction/backup-1770778489/: Cargo.toml
contracts/auction/backup-1770778489/src/: lib.rs
contracts/auction/backup-v2.3.2/: Cargo.toml  lib.rs
contracts/auction/backup/src/: lib.rs
contracts/auction/fuzz/: Cargo.toml
contracts/auction/fuzz/fuzz_targets/: auction_fuzz.rs
contracts/auction/minimal_auction/: Cargo.toml
contracts/auction/scripts/deploy/: deploy_coreum_simple.sh
contracts/auction/scripts/fix/: comprehensive_fix.py  fix_msg_final.sh  proper_fix.sh  remove_all_fc.py  remove_problematic_bytes.py  simple_safe_patch.py  smart_fix_instructions.py  wasm_patcher.py
contracts/auction/src/: lib.rs
contracts/auction/src.backup.1770773172/: contract.rs  lib.rs  msg.rs  msg.rs.broken  msg.rs.duplicates  state.rs
contracts/auction/src.backup.1770773172/execute/: bid.rs  buy_now.rs  create.rs  mod.rs  settle.rs
contracts/auction/src.backup.1770773172/query/: auction.rs  config.rs  mod.rs
contracts/auction/src/contract/: mod.rs
contracts/auction/src/error/: mod.rs
contracts/auction/src/msg/: mod.rs
contracts/auction/src/state/: mod.rs
contracts/auction/src/tests/: mod.rs  mod.rs.bak  mod.rs.bak2
contracts/auction/tests/: integration_tests.rs  integration_tests.rs.complex
contracts/auction/tests.bak/: integration_tests.rs  integration_tests.rs.bak
contracts/deployment_package_20260208_175237/: Cargo.toml
contracts/deployment_package_20260208_175237/src/: contract.rs  contract.rs.bak  contract.rs.bak_all  contract.rs.broken  contract.rs.fresh_base  contract.rs.proper  contract.rs.working  lib.rs  msg.rs  msg.rs.saved  state.rs  state.rs.proper
contracts/phoenix-auction/: instantiate_phoenix.json  phoenix_auction.wat  ultra_simple.wat
contracts/phoenix-cosmwasm/: Cargo.toml
contracts/phoenix-cosmwasm/src/: lib.rs
contracts/phoenix-escrow/: .gitignore  Cargo.toml  NOTICE  SECURITY.md  clean_query.rs  example_response.json  minimal_query.rs  update_dependencies.sh
contracts/phoenix-escrow/schema/: execute.json  instantiate.json  query.json
contracts/phoenix-escrow/src/: contract.rs  contract.rs.corrupted  contract.rs.restored  error.rs  kyc.rs  msg.rs  state.rs  state.rs.fixed  state.rs.saved
contracts/phoenix-escrow/tests/: integration_tests.rs
contracts/simple-counter/: Cargo.toml
contracts/simple-counter/src/: lib.rs
docs/: CONTRIBUTION_SCORECARD.md  FEE_MODEL.md  MANIFESTO.md  README.md  ROADMAP.md  TECHNICAL_FAQ.md  TECHNICAL_SPECIFICATION.md
docs/architecture/: ARCHITECTURE-OVERVIEW.md  BRIDGE_SECURITY.md  ORACLE_DESIGN.md  README.md  SECURITY_PATTERNS.md
docs/business/: COLLECTIBLES_REGISTRY.md  FOCUS_PHOENIXPME.md  PHOENIXPME.md  PROGRESS-02142026.md  PROGRESS-02152026.md  PROJECTS_NEW.md  ROADMAP_TIMELINE.md
docs/concepts/: INSURANCE_MODULE.md
docs/development/: PROGRESS.md
docs/diagrams/: auction_state_machine.md
docs/guides/: CONTRIBUTOR_GUIDE.md
docs/legal/: COMMERCIAL_TERMS_PART1.md  COMMERCIAL_TERMS_PART2.md  CONTRIBUTOR_AGREEMENT.md  DUAL_LICENSE.md  FACTUAL_LEGAL_STATUS.md  FEE_MODEL.md  FEE_MODEL_SIMPLE.md  FULL_CONTRACT.md  LICENSE_COMMERCIAL_FULL.md  LICENSE_GPLv3_WITH_CARVEOUT.md  LICENSE_NOTICE.md  NOTICE.md  README.md  ROYALTY_AGREEMENT.md  SECURITY.md  TX_NOTICE.md
docs/reports/: CONSISTENCY_REPORT.md
docs/setup/: INSTALL_DEPENDENCIES.md  QUICK_START.md  setup.md
docs/technical/: DAO_OPERATIONS.md  GOVERNANCE.md  TESTUSD_TOKEN_CREATION.md  TOKENOMICS.md
docs/test-files/: TEST_CI_WORKING.md
scripts/: start_all.sh  start_backend.sh
scripts/deploy/: deploy-tx-testnet.sh.save  deploy-tx-testnet.sh.save.1
tests/integration/: auction-flow.test.js  test-mock-wallets.js
(+131 files in other folders)
