[package]
name = "auction-guaranteed"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "auction_guaranteed"  # Explicit library name

[dependencies]
cosmwasm-std = { version = "=1.1.10", default-features = false }
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
