[package]
name = "phoenix-auction"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "=1.1.10", default-features = false }
serde = { version = "1", features = ["derive"] }
schemars = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
