[package]
name = "phoenix-auction"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
cw-storage-plus = "1.2"
cw2 = "1.1"
thiserror = "1.0"

[dev-dependencies]
cosmwasm-schema = "1.1"
phoenix-auction = { path = "." }
proptest = "1.10.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true

#[[test]]
#name = "integration"
#path = "tests/integration_tests.rs"
