[package]
name = "phoenix-escrow"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5" }
cosmwasm-schema = { version = "1.5" }
cw-storage-plus = { version = "1.2" }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"  # Remove 'features = ["derive"]' - thiserror doesn't have derive feature

[dev-dependencies]
cosmwasm-std = { version = "1.5" }
cosmwasm-storage = { version = "1.5" }
cw-multi-test = "0.19"

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
lto = true
codegen-units = 1
