[package]
name = "phoenix-escrow"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cosmwasm-storage = { version = "1.5.0" }
cw-storage-plus = "1.1.0"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
cw-utils = "3.0.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.5.0" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.release.build-override]
opt-level = 3
